--- a/index.html
+++ b/index.html
@@ -240,6 +240,43 @@
                         </button>
                     </div>
                 </div>
+                <!-- Project 3 -->
+                <div class="mb-10 p-4 md:w-1/2">
+                    <h5 class="font-semibold text-lg text-dark mt-5 mb-2 dark:text-white">Web Analisis Pemupukan Kelapa Sawit, Sawita Raya</h5>
+                    <div class="relative rounded-md shadow-md overflow-hidden carousel">
+                        <div class="carousel-wrapper overflow-hidden">
+                            <div class="carousel-slides flex transition-transform">
+                                <div class="carousel-item flex-none w-full">
+                                    <img src="dist/img/sawitaapp/1.png" alt="Slide 1" class="w-full">
+                                </div>
+                                <div class="carousel-item flex-none w-full">
+                                    <img src="dist/img/sawitaapp/2.png" alt="Slide 1" class="w-full">
+                                </div>
+                                <div class="carousel-item flex-none w-full">
+                                    <img src="dist/img/sawitaapp/3.png" alt="Slide 1" class="w-full">
+                                </div>
+                                <div class="carousel-item flex-none w-full">
+                                    <img src="dist/img/sawitaapp/4.png" alt="Slide 1" class="w-full">
+                                </div>
+                                <div class="carousel-item flex-none w-full">
+                                    <img src="dist/img/sawitaapp/5.png" alt="Slide 1" class="w-full">
+                                </div>
+                                <div class="carousel-item flex-none w-full">
+                                    <img src="dist/img/sawitaapp/6.png" alt="Slide 1" class="w-full">
+                                </div>
+                                
+                            </div>
+                        </div>
+                        <button
+                            class="prev-button absolute top-1/2 -translate-y-1/2 left-2 bg-gray-800 text-white p-2 rounded-full hover:bg-gray-700">
+                            &#10094;
+                        </button>
+                        <button
+                            class="next-button absolute top-1/2 -translate-y-1/2 right-2 bg-gray-800 text-white p-2 rounded-full hover:bg-gray-700">
+                            &#10095;
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -250,9 +287,9 @@
         <div class="container">
             <div class="w-full px-4">
                 <div class="mx-auto text-center mb-16">
-                    <h2 class="font-semibold text-2xl text-white mb-2 capitalize">Clients</h2>
-                    <h5  class="font-semibold text-blue-950 text-3xl mb-4 sm:text-4xl lg:text-5xl text-center">Sponsored & Supported by</h5>
-                    <p align="justify" class="font-medium text-md text-white text-center md:text-lg">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat totam similique impedit.</p>
+                    <!-- <h2 class="font-semibold text-2xl text-white mb-2 capitalize">Clients</h2> -->
+                    <h5  class="font-semibold text-blue-950 text-3xl mb-4 sm:text-4xl lg:text-5xl text-center">Technologies Used</h5>
+                    <!-- <p align="justify" class="font-medium text-md text-white text-center md:text-lg">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat totam similique impedit.</p> -->
                 </div>
             </div>
             <!-- calien logo start -->
@@ -302,11 +339,11 @@
                 <div class="max-w-xl mx-auto text-center mb-16">
                     <h3 class="font-semibold text-primary mb-3 uppercase">My Blogs</h3>
                     <h1 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl dark:text-white">Blogs</h1>
-                    <p align="justify" class="font-medium text-md text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque aut corrupti ab.</p>
+                    <p align="justify" class="font-medium text-md text-secondary md:text-lg">Not Found Content.</p>
                 </div>
                 <div class="flex flex-wrap">
                     <!-- 1 -->
-                    <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
+                    <!-- <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
                         <div class="bg-white rounded-xl overflow-hidden shadow-lg mb-10">
                             <img src="https://source.unsplash.com/360x200?programing" alt="Programing" class="w-full">
                             <div class="py-8 px-6">
@@ -318,9 +355,9 @@
                                 <a href="#" class="font-medium text-white bg-primary py-2 px-4 rounded-lg">Read more</a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- 2 -->
-                    <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
+                    <!-- <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
                         <div class="bg-white rounded-xl overflow-hidden shadow-lg mb-10">
                             <img src="https://source.unsplash.com/360x200?mechanical+keyboard" alt="Programing" class="w-full">
                             <div class="py-8 px-6">
@@ -332,9 +369,9 @@
                                 <a href="#" class="font-medium text-white bg-primary py-2 px-4 rounded-lg">Read more</a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- 3 -->
-                    <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
+                    <!-- <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
                         <div class="bg-white rounded-xl overflow-hidden shadow-lg mb-10">
                             <img src="https://source.unsplash.com/360x200?coffe+drinks" alt="Programing" class="w-full">
                             <div class="py-8 px-6">
@@ -346,7 +383,7 @@
                                 <a href="#" class="font-medium text-white bg-primary py-2 px-4 rounded-lg">Read more</a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -359,8 +396,8 @@
             <div class="max-w-xl mx-auto text-center mb-16">
                 <h3 class="font-semibold text-primary mb-3 uppercase">Contact Person</h3>
                 <h1 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl dark:text-white">Contact Me !</h1>
-                <p align="justify" class="font-medium text-md text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur
-                    adipisicing elit. Atque aut corrupti ab.</p>
+                <!-- <p align="justify" class="font-medium text-md text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Atque aut corrupti ab.</p> -->
             </div>
         </div>
         <form action="">
@@ -390,7 +427,7 @@
     <!-- Footer start -->
     <footer class="bg-dark pt-24 pb-12 dark:bg-sky-950">
         <div class="container">
-            <div class="flex flex-wrap">
+            <!-- <div class="flex flex-wrap">
                 <div class="w-full px-4 mb-12 text-slate-300 font-medium md:w-1/2   ">
                     <h2 class="font-bold text-4xl text-white mb-3 ">MR.</h2>
                     <h3 class="uppercase font-bold text-2xl">Contact Me</h3>
@@ -409,7 +446,7 @@
                         <li><a href="#contact" class="inline-block text-base hover:text-hover mb-3">Contact</a></li>
                     </ul>
                 </div>
-            </div>
+            </div> -->
             <div class="w-full pt-10 border-t border-slate-700">
                 <div class="flex items-center justify-center mb-5">
                     <!-- Tiktok start-->
